day6/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: day6
  labels:
    course: kubernetes-zero-to-hero
    module: networking
