day6/manifests/06-network-client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: network-client
  namespace: day6
  labels:
    app: network-client
spec:
  restartPolicy: Never
  containers:
    - name: busybox
      image: busybox:1.36
      command:
        - sleep
        - "3600"
