day6/manifests/02-frontend-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-nodeport
  namespace: day6
  labels:
    app: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
      nodePort: 30086
