day6/manifests/04-backend-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: day6
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
