day6/manifests/05-externalname-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-api
  namespace: day6
spec:
  type: ExternalName
  externalName: example.com
